banner according to device width and light dark mode fix

--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -4,16 +4,18 @@
   position: relative;
   height: 100vh;
   width: 100%;
+  color: #fff;
 
   .banner-content {
     position: relative;
     z-index: 1;
     font-size: 4rem;
-    text-align: center;
+    text-align: left;
     top: 25%;
     overflow: hidden;
     height: 100vh;
     margin: 0 0.5rem;
+    width: 70%;
 
     @media screen and (max-width: 1024px) {
       font-size: 3.3rem;
