--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -49,6 +49,12 @@
   position: absolute;
   right: 30px;
   z-index: 3;
+  background-color: rgba($color: #000000, $alpha: 0.9);
+  margin: 0 2rem;
+  color: white;
+  @media screen and (max-width: 768px) {
+    margin: 0 0.8rem;
+  }
 }
 
 .menu {
